--- a/public/legal.html
+++ b/public/legal.html
@@ -1,103 +1,212 @@
+<!DOCTYPE html>
+<html>
+<body>
+<br />
 Claco Platform Privacy Notice
+<br />
 
+<br />
 December 14, 2008
+<br />
 Welcome to the Claco.com (owned and operated by ClassConnect Inc.) applications, platform, web sites, and services operated or produced by Claco (collectively, the 'Claco Platform'). 
+<br />
 Claco values the privacy of the users, subscribers, publishers, members, and others who visit and use the Claco Platform (collectively or individually, 'You' or 'Users').
+<br />
 
+<br />
 By using the Claco Platform, you expressly consent to the information handling practices described in this notice.
+<br />
 
+<br />
 This Privacy Notice is incorporated into and is subject to the Claco Platform Terms of Use.  Your use of the Claco Platform and any personal information you provide through the Claco Platform are subject at all time to this Privacy Notice and the Terms of Use.
+<br />
 
+<br />
 TABLE OF CONTENTS
+<br />
 The Information Claco Collects
+<br />
 The Way Claco Uses Information
+<br />
 When Claco Discloses Information
+<br />
 Your Choices
+<br />
 Data Security
+<br />
 Children's Privacy
+<br />
 International Visitors
+<br />
 In the Event of Merger or Sale
+<br />
 Changes and Updates to this Privacy Notice
+<br />
 Effective Date, Date Last Modified
+<br />
 Claco Contact Information
+<br />
 
+<br />
 1.     The Information Claco Collects:
+<br />
 
+<br />
 -      User-provided Information:  You may provide to Claco what is generally called 'personally identifiable' information (such as your name, email address, postal mailing address, home/mobile telephone number) if you log in to the Claco Platform, or otherwise use the features and functionality of the Claco Platform.
+<br />
 
+<br />
 -      'Cookies' Information:  When you access the Claco Platform, we may send one or more cookies & small text files containing a string of alphanumeric characters to your computer.  Claco may use both session cookies and persistent cookies.  A session cookie disappears after you close your browser.  A persistent cookie remains after you close your browser and may be used by your browser on subsequent visits to the Claco Platform.  Persistent cookies can be removed.  Please review your web browser 'Help' file to learn the proper way to modify your cookie settings.
+<br />
 
+<br />
 -      'Automatically Collected' Information:  When you access the Claco Platform or open one of our HTML emails, we may automatically record certain information from your system by using different types of tracking technology.  This 'automatically collected' information may include Internet Protocol address ('IP Address'), a unique device or user ID, version of software installed, system type, the content and pages that you access on the Claco Platform, and the dates and times that you visit the Claco Platform. 
+<br />
 
+<br />
 2.     The Way Claco Uses Information:
+<br />
 
+<br />
 Claco uses the information that you provide or that we collect to operate, maintain, enhance, and provide all of the features and services found on the Claco Platform as well as to track user-generated content and Users to the extent necessary to comply as a service provider with the Digital Millennium Copyright Act. 
+<br />
 
+<br />
 We will use your email address, without further consent, for administrative communications such as notifying you of major Claco Platform updates, for customer service purposes, to address copyright infringement or defamation issues, or to contact you regarding any content that you have posted to or downloaded from the Claco Platform.
+<br />
 
+<br />
 Claco uses all of the information that we collect to understand the usage trends and preferences of our Users, to improve the way the Claco Platform works and looks, and to create new features and functionality.
+<br />
 
+<br />
 Claco may use 'Automatically Collected' information and 'Cookies' information to:  (a) automatically update the Claco application on your system; (b) remember your information so that you will not have to re-enter it during your visit or the next time you access the Claco Platform; (c) monitor aggregate site usage metrics such as total number of visitors and pages accessed; (d) provide such metrics to Users as they pertain to such User's uploaded content; and (e) track your entries, submissions, and status in any promotions or other activities.
+<br />
 
+<br />
 3.     When Claco Discloses Information:
+<br />
 
+<br />
 -      Claco does not share your personally identifiable information with other organizations for their marketing or promotional uses without your prior express consent.  Please be aware, however, that any personally identifiable information that you voluntarily choose to display on the Claco Platform such as when you publish attribution credits for documents or profile information becomes publicly available and may be collected and used by others without restriction.
+<br />
 
+<br />
 -      We may disclose User information to affiliated companies or other businesses or persons to: provide web site hosting, maintenance, and security services; fulfill orders; conduct data analysis and create reports; offer certain functionality; and assist Claco in improving the Claco Platform and creating new services features.  We require that these parties process such information in compliance with this Privacy Notice, we authorize only a limited use of such information, and we require these parties to use reasonable confidentiality measures.
+<br />
 
+<br />
 -      Claco may disclose User information if required to do so by law or in the good-faith belief that such action is necessary to comply with state and federal laws (such as U.S. Copyright law) or respond to a court order, judicial or other government subpoena, or warrant in the manner required by the requesting entity.
+<br />
 
+<br />
 -      Claco also reserves the right to disclose User information that we believe, in good faith, is appropriate or necessary: to take precautions against liability; to protect Claco from fraudulent, abusive, or unlawful uses; to investigate and defend ourselves against third-party claims or allegations; to assist government enforcement agencies; to protect the security or integrity of the Claco Platform; or to protect the rights, property, or personal safety of Claco, our Users, or others.
+<br />
 
+<br />
 
+<br />
 4.     Your Choices:
+<br />
 
+<br />
 You may, of course, decline to share your personally-identifiable information with Claco, in which case Claco will not be able to provide to you some of the features and functionality found on the Claco Platform.  You may update, correct, or delete your user information and preferences at any time by following the directions here. 
+<br />
 
+<br />
 To protect your privacy and security, we take reasonable steps to verify your identity before granting you account access or making corrections to your information.  You are responsible for maintaining the secrecy of your unique password and account information at all times.
+<br />
 
+<br />
 5.    Our Commitment to Data Security:     
+<br />
 
+<br />
 Claco uses commercially reasonable physical, managerial, and technical safeguards to preserve the integrity and security of your personal information.  We cannot, however, ensure or warrant the security of any information you transmit to Claco, and you do so at your own risk.  Once we receive your transmission of information, Claco makes commercially reasonable efforts to ensure the security of our systems.  However, please note that this is not a guarantee that such information may not be accessed, disclosed, altered, or destroyed by breach of any of our physical, technical, or managerial safeguards.
+<br />
 
+<br />
 If Claco learns of a security systems breach, then we may attempt to notify you electronically so that you can take appropriate protective steps. Claco may post a notice on the Claco Platform if a security breach occurs.  Depending on where you live, you may have a legal right to receive notice of a security breach in writing.  To receive a free written notice of a security breach you should notify us at privacy@Claco.com.
+<br />
 
+<br />
 6.     Our Commitment to Children's Privacy:
+<br />
 
+<br />
 If you are under 13 years of age, then please do not use or access THE CLACO PLATFORM at any time or in any manner. 
+<br />
 
+<br />
 Protecting the privacy of young children is especially important.  For that reason, Claco does not knowingly collect or maintain personally identifiable information from persons under 13 years-of-age.  If Claco learns that personally-identifiable information of persons less than 13-years-of-age has been collected on or through the Claco Platform, then Claco will take the appropriate steps to delete this information.
+<br />
 
+<br />
 If you are the parent or legal guardian of a child under 13 who has become Claco Platform member, then please contact Claco at privacy@claco.com to have that child's account terminated and information deleted.
+<br />
 
+<br />
 The following are some resources that may help parents and legal guardians in monitoring and limiting your childrens' access to certain types of material on the Internet.  While Claco does not endorse these products, we provide information about them as a public service to our community. 
+<br />
 
+<br />
 'OnGuard Online', maintained by the Federal Trade Commission.
+<br />
 
+<br />
 WiredSafety
+<br />
 
+<br />
 The Child Safety Network
+<br />
 
+<br />
 Control Kids
+<br />
 
+<br />
 Cyber Sitter
+<br />
 
+<br />
 Net Nanny
+<br />
 
+<br />
 7.     International Visitors:
+<br />
 
+<br />
 For Users visiting the Claco Platform from the European Economic Area or other non-U.S. territories, please note that any data you enter into the Claco Platform will be transferred outside the European Economic Area or such other non-U.S. territory for use by Claco and its affiliates for any of the purposes described herein.  In addition, because Claco operates globally, we may make information we gather available to worldwide business units and affiliates.  By providing any data on the Claco Platform, you hereby expressly consent to such transfers of your data to the United States or other countries. 
+<br />
 
+<br />
 8.     In the Event of Merger or Sale:
+<br />
 
+<br />
 In the event that Claco is acquired by or merged with a third-party entity, we reserve the right, in any of these circumstances, to transfer or assign the information that we have collected from Users as part of that merger, acquisition, sale, or other change of control.
+<br />
 
+<br />
 9.     Changes and Updates to this Privacy Notice:
+<br />
 
+<br />
 This Privacy Notice may be revised periodically without further notice to you and this will be reflected by a 'last modified' date below.  Please revisit this page to stay aware of any changes.  In general, we only use your personal information in the manner described in the Privacy Notice in effect when we received that personal information.  Your continued use of the Claco Platform constitutes your agreement to this Privacy Notice and any future revisions.
+<br />
 
+<br />
 For revisions to this Privacy Notice that may be materially less restrictive on our use or disclosure of personal information you have provided to us, we will make reasonable efforts to notify you and obtain your consent before implementing revisions with respect to such information.  
+<br />
 
+<br />
 10.  Claco Contact Information:
+<br />
 
+<br />
 Please contact Claco with any questions or comments about this Privacy Notice, your personal information, and our third-party disclosure practices or your consent choices at: Claco.com, 847 Webster St Palo Alto, CA 94301, or by email support@claco.com.  We will respond to your inquiry within 30 days of its receipt.
+<br />
+</body>
+</html>
