--- a/public/legal.html
+++ b/public/legal.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html>
-<body>
+<div class="container">
 <br />
 Claco Platform Privacy Notice
 <br />
@@ -208,5 +206,4 @@ For revisions to this Privacy Notice that may be materially less restrictive on 
 <br />
 Please contact Claco with any questions or comments about this Privacy Notice, your personal information, and our third-party disclosure practices or your consent choices at: Claco.com, 847 Webster St Palo Alto, CA 94301, or by email support@claco.com.  We will respond to your inquiry within 30 days of its receipt.
 <br />
-</body>
-</html>
+</div>
