--- a/public/tos.html
+++ b/public/tos.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html>
-<body>
+<div class="container">
 Terms of Service
 <br />
 Last Updated: May 8, 2012
@@ -285,5 +283,4 @@ Claco's Designated Copyright Agent to receive notifications and counter-notifica
 <br />
 © 2011 - 2012 ClassConnect, Inc.
 <br />
-</body>
-</html>
+</div>
