--- a/public/500.html
+++ b/public/500.html
@@ -1,25 +1,299 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>Something went wrong! (500)</title>
   <style type="text/css">
-    body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
-    div.dialog {
-      width: 25em;
-      padding: 0 4em;
-      margin: 4em auto 0 auto;
-      border: 1px solid #ccc;
-      border-right-color: #999;
-      border-bottom-color: #999;
-    }
-    h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
+  html, body, div, span, applet, object, iframe,
+  h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+  a, abbr, acronym, address, big, cite, code,
+  del, dfn, em, img, ins, kbd, q, s, samp,
+  small, strike, strong, sub, sup, tt, var,
+  b, u, i, center,
+  dl, dt, dd, ol, ul, li,
+  fieldset, form, label, legend,
+  table, caption, tbody, tfoot, thead, tr, th, td,
+  article, aside, canvas, details, embed, 
+  figure, figcaption, footer, header, hgroup, 
+  menu, nav, output, ruby, section, summary,
+  time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+  }
+  /* HTML5 display-role reset for older browsers */
+  article, aside, details, figcaption, figure, 
+  footer, header, hgroup, menu, nav, section {
+    display: block;
+  }
+  body {
+    line-height: 1;
+  }
+  ol, ul {
+    list-style: none;
+  }
+  blockquote, q {
+    quotes: none;
+  }
+  blockquote:before, blockquote:after,
+  q:before, q:after {
+    content: '';
+    content: none;
+  }
+  table {
+    border-collapse: collapse;
+    border-spacing: 0;
+  }
+  html, body { height: 100% }
+  body {
+    background: #dfdfdf url(../images/404_bg.jpg) repeat;
+    font-family: Helvetica, Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    overflow: hidden;
+  }
+  @font-face {
+      font-family: 'TeXGyreScholaRegular';
+      src: url('../styles/fonts/texgyreschola-regular-webfont.eot');
+      src: url('../styles/fonts/texgyreschola-regular-webfont.eot?#iefix') format('embedded-opentype'),
+      url('../styles/fonts/texgyreschola-regular-webfont.woff') format('woff'),
+      url('../styles/fonts/texgyreschola-regular-webfont.ttf') format('truetype'),
+      url('../styles/fonts/texgyreschola-regular-webfont.svg#TeXGyreScholaRegular') format('svg');
+      font-weight: normal;
+      font-style: normal;
+
+  }
+  @font-face {
+      font-family: 'TeXGyreScholaBold';
+      src: url('../styles/fonts/texgyreschola-bold-webfont.eot');
+      src: url('../styles/fonts/texgyreschola-bold-webfont.eot?#iefix') format('embedded-opentype'),
+      url('t../styles/fonts/exgyreschola-bold-webfont.woff') format('woff'),
+      url('../styles/fonts/texgyreschola-bold-webfont.ttf') format('truetype'),
+      url('../styles/fonts/texgyreschola-bold-webfont.svg#TeXGyreScholaBold') format('svg');
+      font-weight: normal;
+      font-style: normal;
+
+  }
+  @-webkit-keyframes popin { 
+      0% {
+          -webkit-transform: scale3d(0.1, 0.1, 1);
+          opacity: 0;
+      }
+      45% {
+          -webkit-transform: scale3d(1.07, 1.07, 1);
+          opacity: 1;
+      }
+      70% { -webkit-transform: scale3d(0.95, 0.95, 1) }
+      100% { -webkit-transform: scale3d(1, 1, 1) }
+  }
+  @-moz-keyframes popin { 
+      0% {
+          -moz-transform: scale(0.1, 0.1);
+          opacity: 0;
+      }
+      45% {
+          -moz-transform: scale(1.07, 1.07);
+          opacity: 1;
+      }
+      70% { -moz-transform: scale(0.95, 0.95) }
+      100% { -moz-transform: scale(1, 1) }
+  }
+  .left { float: left }
+  .right { float: right }
+  ::-webkit-input-placeholder {
+      font-style: italic;
+      color: #bababa;
+  }
+  :-moz-placeholder {
+      font-style: italic;
+      color: red;
+  }
+  #wrapper {
+      height: 100%;
+      background-image: linear-gradient(bottom, rgba(223,223,223,0) 50%, rgba(223,223,223,1) 100%);
+      background-image: -o-linear-gradient(bottom, rgab(223,223,223,0) 50%, rgba(223,223,223,1) 100%);
+      background-image: -moz-linear-gradient(bottom, rgba(223,223,223,0) 50%, rgba(223,223,223,1) 100%);
+      background-image: -webkit-linear-gradient(bottom, rgba(223,223,223,0) 50%, rgba(223,223,223,1) 100%);
+      background-image: -ms-linear-gradient(bottom, rgba(223,223,223,0) 50%, rgba(223,223,223,1) 100%);
+  }
+  .logo {
+    position: absolute;
+    background: url(../images/logo.png);
+    width: 118px;
+    height: 69px;
+    top: -6px;
+    left: 4%;
+    z-index: 1;
+    opacity: .75;
+    -webkit-transition: all 0.3s ease-in-out;
+      -moz-transition: all 0.3s ease-in-out;
+  }
+  .logo:hover {
+    opacity: 1;
+    top: 0px;
+  }
+  #main {
+      position: relative;
+      padding-top: 8%;
+      -webkit-animation-name: popin;
+      -moz-animation-name: popin;
+      -webkit-animation-duration: .8s;
+      -moz-animation-duration: 800ms;
+    
+  }
+  #main #header { margin-bottom: 10px }
+  #main #header h1 {
+      font: 72px 'TeXGyreScholaBold', Arial, sans-serif;
+      color: #0061a5;
+      text-shadow: 0 1px #f7f7f7;
+      text-align: center;
+  }
+  #main #header h1 img.icon {
+      position: relative;
+    width: 50px;
+    height: 51px;
+      top: 2px;
+      padding-right: 11px;
+  }
+  #main #content {
+      position: relative;
+      margin: 0 auto 0 auto;
+      width: 600px;
+      background: white;
+      border: solid 3px #f2f2f2;
+      -moz-box-shadow: 0 0 0 1px #bfbfbf, 0 0 10px rgba(0,0,0,.10);
+      -webkit-box-shadow: 0 0 0 1px #bfbfbf, 0 0 10px rgba(0,0,0,.10);
+      box-shadow: 0 0 0 1px #bfbfbf, 0 0 10px rgba(0,0,0,.10);
+      -webkit-border-radius: 5px;
+      -moz-border-radius: 5px;
+      border-radius: 5px;
+  }
+  #main #content h2 {
+      background: url(../images/404_s-divider.jpg) no-repeat;
+      background-position: bottom;
+      padding: 18px 0 28px 0;
+      font: 20px 'TeXGyreScholaRegular', Arial, sans-serif;
+      color: #8e8e8e;
+      text-align: center;
+  }
+  #main #content p {
+      position: relative;
+      padding: 20px 30px 0px 30px;
+      font-size: 13px;
+      line-height: 1.3em;
+      color: #8e8e8e;
+  }
+  #main #content .utilities { margin: 40px 30px 18px 30px }
+  #main #content .utilities input[type=text] {
+      width: 280px;
+      padding: 7px 8px;
+      background: white url(../images/404_search.png) no-repeat;
+      background-position: 97% 50%;
+      border: solid 1px #cdcdcd;
+      outline: none;
+      -moz-box-shadow: 0 4px 3px rgba(0,0,0,.05) inset;
+      -webkit-box-shadow: 0 4px 3px rgba(0,0,0,.05) inset;
+      box-shadow: 0 4px 3px rgba(0,0,0,.05) inset;
+      -webkit-border-radius: 3px;
+      -moz-border-radius: 3px;
+      border-radius: 3px;
+      font-size: 14px;
+      color: #8e8e8e;
+      -webkit-font-smoothing: antialiased;
+      -webkit-transition: all 0.3s ease-in-out;
+      -moz-transition: all 0.3s ease-in-out;
+  }
+  #main #content .utilities input[type=text]:focus { border: solid 1px #9f9f9f }
+  #main #content .utilities .button-container { padding-top: 2px }
+  #main #content .utilities .button-container .button {
+      display: inline-block;
+      margin-left: 5px;
+      padding: 8px 14px;
+      background: #006db0;
+      background-image: linear-gradient(bottom, #0062a6 0%, #0079bb 100%);
+      background-image: -o-linear-gradient(bottom, #0062a6 0%, #0079bb 100%);
+      background-image: -moz-linear-gradient(bottom, #0062a6 0%, #0079bb 100%);
+      background-image: -webkit-linear-gradient(bottom, #0062a6 0%, #0079bb 100%);
+      background-image: -ms-linear-gradient(bottom, #0062a6 0%, #0079bb 100%);
+      -moz-box-shadow: 0 1px #00acd8 inset;
+      -webkit-box-shadow: 0 1px #00acd8 inset;
+      box-shadow: 0 1px #00acd8 inset;
+      border: solid 1px #003255;
+      -webkit-border-radius: 3px;
+      -moz-border-radius: 3px;
+      border-radius: 3px;
+      font-size: 14px;
+      color: white;
+      font-weight: bold;
+      text-shadow: 0 -1px #00385a;
+      text-decoration: none;
+  }
+  #main #content .utilities .button-container .button:hover {
+      background: #0081c6;
+      background-image: linear-gradient(bottom, #006fbb 0%, #008dce 100%);
+      background-image: -o-linear-gradient(bottom, #006fbb 0%, #008dce 100%);
+      background-image: -moz-linear-gradient(bottom, #006fbb 0%, #008dce 100%);
+      background-image: -webkit-linear-gradient(bottom, #006fbb 0%, #008dce 100%);
+      background-image: -ms-linear-gradient(bottom, #006fbb 0%, #008dce 100%);
+      -moz-box-shadow: 0 1px #00c1e4 inset;
+      -webkit-box-shadow: 0 1px #00c1e4 inset;
+      box-shadow: 0 1px #00c1e4 inset;
+  }
+  #main #content .utilities .button-container .button:focus { color: black }
+  #main #footer {
+      position: relative;
+      margin: 6px auto 0 auto;
+      text-align: center;
+  }
+  #main #footer ul {
+      font: 13px 'TeXGyreScholaRegular', Arial, sans-serif;
+      color: #8e8e8e;
+      text-shadow: 0 1px white;
+  }
+  #main #footer ul li {
+      display: inline;
+      margin: 0 12px;
+  }
+  #main #footer ul li a {
+      font: 13px 'TeXGyreScholaRegular', Arial, sans-serif;
+      color: #8e8e8e;
+      text-shadow: 0 1px white;
+      text-decoration: none;
+  }
+  #main #footer ul li a:hover {
+      color: #0061a5;
+      text-decoration: underline;
+  }
   </style>
 </head>
 
+
 <body>
-  <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
+<div id="wrapper">
+<a class="logo" href="#"></a>
+  <div id="main">
+    <div id="header">
+      <h1>500</h1>
+    </div>
+    <div id="content">
+      <h2>Oops! Something went horribly wrong :(</h2>
+      <p>We made a mistake please forgive us.</p>
+      <div class="utilities">
+        <div class="button-container right">
+          <a class="button" href="http://www.claco.com/">Go Back Home</a>
+          <a href="mailto:support@claco.com?subject=Claco Feedback" class="button">Contact Us</a>
+        </div>
+        <div style="clear: both"></div>
+      </div>
+    </div>
+    <div id="footer">
+      <ul>
+        <li><a href="http://www.claco.com/apply">Apply</a></li>
+        <li><a href="http://www.claco.com/about">About Us</a></li>
+        <li><a href="http://www.claco.com/about/team">Team Claco</a></li>
+      </ul>
+    </div>
   </div>
-</body>
+</div>
 </html>
