--- a/public/500.html
+++ b/public/500.html
@@ -282,7 +282,7 @@
       <div class="utilities">
         <div class="button-container right">
           <a class="button" href="http://www.claco.com/">Go Back Home</a>
-          <a href="mailto:support@claco.com?subject=Claco Feedback" class="button">Contact Us</a>
+          <a href="mailto:support@claco.com?subject=Claco Feedback" class="button">Contact a Human</a>
         </div>
         <div style="clear: both"></div>
       </div>
