--- a/public/500.html
+++ b/public/500.html
@@ -48,32 +48,9 @@
   }
   html, body { height: 100% }
   body {
-    background: #dfdfdf url(../images/404_bg.jpg) repeat;
     font-family: Helvetica, Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     overflow: hidden;
-  }
-  @font-face {
-      font-family: 'TeXGyreScholaRegular';
-      src: url('../styles/fonts/texgyreschola-regular-webfont.eot');
-      src: url('../styles/fonts/texgyreschola-regular-webfont.eot?#iefix') format('embedded-opentype'),
-      url('../styles/fonts/texgyreschola-regular-webfont.woff') format('woff'),
-      url('../styles/fonts/texgyreschola-regular-webfont.ttf') format('truetype'),
-      url('../styles/fonts/texgyreschola-regular-webfont.svg#TeXGyreScholaRegular') format('svg');
-      font-weight: normal;
-      font-style: normal;
-
-  }
-  @font-face {
-      font-family: 'TeXGyreScholaBold';
-      src: url('../styles/fonts/texgyreschola-bold-webfont.eot');
-      src: url('../styles/fonts/texgyreschola-bold-webfont.eot?#iefix') format('embedded-opentype'),
-      url('t../styles/fonts/exgyreschola-bold-webfont.woff') format('woff'),
-      url('../styles/fonts/texgyreschola-bold-webfont.ttf') format('truetype'),
-      url('../styles/fonts/texgyreschola-bold-webfont.svg#TeXGyreScholaBold') format('svg');
-      font-weight: normal;
-      font-style: normal;
-
   }
   @-webkit-keyframes popin { 
       0% {
@@ -117,22 +94,6 @@
       background-image: -webkit-linear-gradient(bottom, rgba(223,223,223,0) 50%, rgba(223,223,223,1) 100%);
       background-image: -ms-linear-gradient(bottom, rgba(223,223,223,0) 50%, rgba(223,223,223,1) 100%);
   }
-  .logo {
-    position: absolute;
-    background: url(../images/logo.png);
-    width: 118px;
-    height: 69px;
-    top: -6px;
-    left: 4%;
-    z-index: 1;
-    opacity: .75;
-    -webkit-transition: all 0.3s ease-in-out;
-      -moz-transition: all 0.3s ease-in-out;
-  }
-  .logo:hover {
-    opacity: 1;
-    top: 0px;
-  }
   #main {
       position: relative;
       padding-top: 8%;
@@ -144,7 +105,7 @@
   }
   #main #header { margin-bottom: 10px }
   #main #header h1 {
-      font: 72px 'TeXGyreScholaBold', Arial, sans-serif;
+      font: 72px Arial, sans-serif;
       color: #0061a5;
       text-shadow: 0 1px #f7f7f7;
       text-align: center;
@@ -170,10 +131,9 @@
       border-radius: 5px;
   }
   #main #content h2 {
-      background: url(../images/404_s-divider.jpg) no-repeat;
       background-position: bottom;
       padding: 18px 0 28px 0;
-      font: 20px 'TeXGyreScholaRegular', Arial, sans-serif;
+      font: 20px Arial, sans-serif;
       color: #8e8e8e;
       text-align: center;
   }
@@ -185,26 +145,6 @@
       color: #8e8e8e;
   }
   #main #content .utilities { margin: 40px 30px 18px 30px }
-  #main #content .utilities input[type=text] {
-      width: 280px;
-      padding: 7px 8px;
-      background: white url(../images/404_search.png) no-repeat;
-      background-position: 97% 50%;
-      border: solid 1px #cdcdcd;
-      outline: none;
-      -moz-box-shadow: 0 4px 3px rgba(0,0,0,.05) inset;
-      -webkit-box-shadow: 0 4px 3px rgba(0,0,0,.05) inset;
-      box-shadow: 0 4px 3px rgba(0,0,0,.05) inset;
-      -webkit-border-radius: 3px;
-      -moz-border-radius: 3px;
-      border-radius: 3px;
-      font-size: 14px;
-      color: #8e8e8e;
-      -webkit-font-smoothing: antialiased;
-      -webkit-transition: all 0.3s ease-in-out;
-      -moz-transition: all 0.3s ease-in-out;
-  }
-  #main #content .utilities input[type=text]:focus { border: solid 1px #9f9f9f }
   #main #content .utilities .button-container { padding-top: 2px }
   #main #content .utilities .button-container .button {
       display: inline-block;
@@ -247,7 +187,7 @@
       text-align: center;
   }
   #main #footer ul {
-      font: 13px 'TeXGyreScholaRegular', Arial, sans-serif;
+      font: 13px Arial, sans-serif;
       color: #8e8e8e;
       text-shadow: 0 1px white;
   }
@@ -256,7 +196,7 @@
       margin: 0 12px;
   }
   #main #footer ul li a {
-      font: 13px 'TeXGyreScholaRegular', Arial, sans-serif;
+      font: 13px Arial, sans-serif;
       color: #8e8e8e;
       text-shadow: 0 1px white;
       text-decoration: none;
@@ -271,7 +211,6 @@
 
 <body>
 <div id="wrapper">
-<a class="logo" href="#"></a>
   <div id="main">
     <div id="header">
       <h1>500</h1>
