added comma to 500
Signed-off-by: Albert Pai <iamalbertpai@gmail.com>

--- a/public/500.html
+++ b/public/500.html
@@ -217,7 +217,7 @@
     </div>
     <div id="content">
       <h2>Oops! Something went horribly wrong :(</h2>
-      <p>We made a mistake please forgive us.</p>
+      <p>We made a mistake, please forgive us.</p>
       <div class="utilities">
         <div class="button-container right">
           <a class="button" href="http://www.claco.com/">Go Back Home</a>
